# rdocx

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  publish.yml
crates/rdocx/: Cargo.toml
crates/rdocx-cli/: Cargo.toml
crates/rdocx-cli/src/: commands.rs  main.rs
crates/rdocx-html/: Cargo.toml
crates/rdocx-html/src/: css.rs  emitter.rs  lib.rs  markdown.rs
crates/rdocx-layout/: Cargo.toml
crates/rdocx-layout/src/: block.rs  bundled_fonts.rs  engine.rs  font.rs  input.rs  line.rs  output.rs  paginator.rs  style_resolver.rs  table.rs
crates/rdocx-opc/: Cargo.toml
crates/rdocx-opc/src/: content_types.rs  package.rs  relationship.rs
crates/rdocx-oxml/: Cargo.toml
crates/rdocx-oxml/src/: borders.rs  core_properties.rs  document.rs  drawing.rs  footnotes.rs  header_footer.rs  lib.rs  numbering.rs  placeholder.rs  properties.rs  shared.rs  styles.rs  table.rs  text.rs  theme.rs
crates/rdocx-pdf/: Cargo.toml
crates/rdocx-pdf/src/: font.rs  image.rs  lib.rs  raster.rs  writer.rs
crates/rdocx-wasm/: Cargo.toml
crates/rdocx-wasm/src/: lib.rs
crates/rdocx/examples/: convert_html_md.rs  generate_all_samples.rs  generate_pdf.rs  generate_samples.rs  header_banner.rs  styled_tables.rs  template_replace.rs
crates/rdocx/src/: document.rs  error.rs  length.rs  lib.rs  paragraph.rs  run.rs  style.rs  table.rs
crates/rdocx/tests/: integration_test.rs
scripts/: release.sh
