[workspace]
resolver = "2"
members = [
    "crates/rdocx-opc",
    "crates/rdocx-oxml",
    "crates/rdocx",
    "crates/rdocx-layout",
    "crates/rdocx-pdf",
    "crates/rdocx-html",
    "crates/rdocx-cli",
]
exclude = [
    "crates/rdocx-wasm",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.85"
authors = ["Atul Sharma"]
repository = "https://github.com/tensorbee/rdocx"
homepage = "https://github.com/tensorbee/rdocx"
keywords = ["docx", "word", "pdf", "ooxml", "document"]
categories = ["parser-implementations", "text-processing"]

[workspace.dependencies]
# Internal crates
rdocx-opc = { path = "crates/rdocx-opc", version = "0.1.0" }
rdocx-oxml = { path = "crates/rdocx-oxml", version = "0.1.0" }
rdocx = { path = "crates/rdocx", version = "0.1.0" }
rdocx-layout = { path = "crates/rdocx-layout", version = "0.1.0" }
rdocx-pdf = { path = "crates/rdocx-pdf", version = "0.1.0" }
rdocx-html = { path = "crates/rdocx-html", version = "0.1.0" }

# External dependencies
zip = "8.1"
quick-xml = "0.37"
thiserror = "2"
fontdb = "0.23"
rustybuzz = "0.20"
ttf-parser = "0.25"
unicode-linebreak = "0.1"
image = "0.25"
itoa = "1"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
