[package]
name = "rdocx-cli"
description = "CLI tool for inspecting, converting, and manipulating DOCX files"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "rdocx"
path = "src/main.rs"

[dependencies]
rdocx = { workspace = true }
rdocx-oxml = { workspace = true }
clap = { version = "4", features = ["derive"] }
serde_json = "1"
