[package]
name = "rdocx-wasm"
description = "WebAssembly bindings for rdocx — DOCX creation, reading, and conversion in the browser"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.93"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rdocx-opc = { path = "../rdocx-opc" }
rdocx-oxml = { path = "../rdocx-oxml" }
rdocx-html = { path = "../rdocx-html" }
wasm-bindgen = "0.2"
js-sys = "0.3"
