[package]
name = "rdocx"
description = "High-level API for reading, writing, and converting DOCX documents"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

[dependencies]
rdocx-opc = { workspace = true }
rdocx-oxml = { workspace = true }
rdocx-layout = { workspace = true }
rdocx-pdf = { workspace = true }
rdocx-html = { workspace = true }
thiserror = { workspace = true }
regex = "1"

[dev-dependencies]
